# prototype

./: CMakeLists.txt  README.md
src/: animation.cpp  animation.hpp  axe.cpp  axe.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  lumberjack.hpp  main.cpp  object.hpp  scene.cpp  scene.hpp
